--- a/notebook/trial_mongo.ipynb
+++ b/notebook/trial_mongo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
        "4   Certified  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,6 +520,366 @@
    "source": [
     "client=pymongo.MongoClient(mongo_db_url)\n",
     "print(client)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>_id</th>\n",
+       "      <th>case_id</th>\n",
+       "      <th>continent</th>\n",
+       "      <th>education_of_employee</th>\n",
+       "      <th>has_job_experience</th>\n",
+       "      <th>requires_job_training</th>\n",
+       "      <th>no_of_employees</th>\n",
+       "      <th>yr_of_estab</th>\n",
+       "      <th>region_of_employment</th>\n",
+       "      <th>prevailing_wage</th>\n",
+       "      <th>unit_of_wage</th>\n",
+       "      <th>full_time_position</th>\n",
+       "      <th>case_status</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>66338a59797cf6ad5ab94cfb</td>\n",
+       "      <td>EZYV20</td>\n",
+       "      <td>Asia</td>\n",
+       "      <td>Doctorate</td>\n",
+       "      <td>N</td>\n",
+       "      <td>N</td>\n",
+       "      <td>843</td>\n",
+       "      <td>1972</td>\n",
+       "      <td>Midwest</td>\n",
+       "      <td>79948.12</td>\n",
+       "      <td>Year</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>Certified</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>66338a59797cf6ad5ab94d00</td>\n",
+       "      <td>EZYV25</td>\n",
+       "      <td>Europe</td>\n",
+       "      <td>Doctorate</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>N</td>\n",
+       "      <td>241</td>\n",
+       "      <td>1981</td>\n",
+       "      <td>Midwest</td>\n",
+       "      <td>71286.04</td>\n",
+       "      <td>Year</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>Certified</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>66338a59797cf6ad5ab94d14</td>\n",
+       "      <td>EZYV45</td>\n",
+       "      <td>Asia</td>\n",
+       "      <td>High School</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>N</td>\n",
+       "      <td>5407</td>\n",
+       "      <td>1998</td>\n",
+       "      <td>West</td>\n",
+       "      <td>28989.87</td>\n",
+       "      <td>Year</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>Denied</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>66338a59797cf6ad5ab94ceb</td>\n",
+       "      <td>EZYV04</td>\n",
+       "      <td>Asia</td>\n",
+       "      <td>Bachelor's</td>\n",
+       "      <td>N</td>\n",
+       "      <td>N</td>\n",
+       "      <td>98</td>\n",
+       "      <td>1897</td>\n",
+       "      <td>West</td>\n",
+       "      <td>83434.03</td>\n",
+       "      <td>Year</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>Denied</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>66338a59797cf6ad5ab94cff</td>\n",
+       "      <td>EZYV24</td>\n",
+       "      <td>North America</td>\n",
+       "      <td>High School</td>\n",
+       "      <td>N</td>\n",
+       "      <td>N</td>\n",
+       "      <td>1517</td>\n",
+       "      <td>1884</td>\n",
+       "      <td>Midwest</td>\n",
+       "      <td>90108.38</td>\n",
+       "      <td>Year</td>\n",
+       "      <td>N</td>\n",
+       "      <td>Certified</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        _id case_id      continent education_of_employee  \\\n",
+       "0  66338a59797cf6ad5ab94cfb  EZYV20           Asia             Doctorate   \n",
+       "1  66338a59797cf6ad5ab94d00  EZYV25         Europe             Doctorate   \n",
+       "2  66338a59797cf6ad5ab94d14  EZYV45           Asia           High School   \n",
+       "3  66338a59797cf6ad5ab94ceb  EZYV04           Asia            Bachelor's   \n",
+       "4  66338a59797cf6ad5ab94cff  EZYV24  North America           High School   \n",
+       "\n",
+       "  has_job_experience requires_job_training  no_of_employees  yr_of_estab  \\\n",
+       "0                  N                     N              843         1972   \n",
+       "1                  Y                     N              241         1981   \n",
+       "2                  Y                     N             5407         1998   \n",
+       "3                  N                     N               98         1897   \n",
+       "4                  N                     N             1517         1884   \n",
+       "\n",
+       "  region_of_employment  prevailing_wage unit_of_wage full_time_position  \\\n",
+       "0              Midwest         79948.12         Year                  Y   \n",
+       "1              Midwest         71286.04         Year                  Y   \n",
+       "2                 West         28989.87         Year                  Y   \n",
+       "3                 West         83434.03         Year                  Y   \n",
+       "4              Midwest         90108.38         Year                  N   \n",
+       "\n",
+       "  case_status  \n",
+       "0   Certified  \n",
+       "1   Certified  \n",
+       "2      Denied  \n",
+       "3      Denied  \n",
+       "4   Certified  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# this below data is used in prediction_trail.ipynb file\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>_id</th>\n",
+       "      <th>case_id</th>\n",
+       "      <th>continent</th>\n",
+       "      <th>education_of_employee</th>\n",
+       "      <th>has_job_experience</th>\n",
+       "      <th>requires_job_training</th>\n",
+       "      <th>no_of_employees</th>\n",
+       "      <th>yr_of_estab</th>\n",
+       "      <th>region_of_employment</th>\n",
+       "      <th>prevailing_wage</th>\n",
+       "      <th>unit_of_wage</th>\n",
+       "      <th>full_time_position</th>\n",
+       "      <th>case_status</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>66338a59797cf6ad5ab94cfb</td>\n",
+       "      <td>EZYV20</td>\n",
+       "      <td>Asia</td>\n",
+       "      <td>Doctorate</td>\n",
+       "      <td>N</td>\n",
+       "      <td>N</td>\n",
+       "      <td>843</td>\n",
+       "      <td>1972</td>\n",
+       "      <td>Midwest</td>\n",
+       "      <td>79948.12</td>\n",
+       "      <td>Year</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>Certified</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        _id case_id continent education_of_employee  \\\n",
+       "0  66338a59797cf6ad5ab94cfb  EZYV20      Asia             Doctorate   \n",
+       "\n",
+       "  has_job_experience requires_job_training  no_of_employees  yr_of_estab  \\\n",
+       "0                  N                     N              843         1972   \n",
+       "\n",
+       "  region_of_employment  prevailing_wage unit_of_wage full_time_position  \\\n",
+       "0              Midwest         79948.12         Year                  Y   \n",
+       "\n",
+       "  case_status  \n",
+       "0   Certified  "
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[0:2][:-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "case_id                     EZYV20\n",
+       "continent                     Asia\n",
+       "education_of_employee    Doctorate\n",
+       "has_job_experience               N\n",
+       "requires_job_training            N\n",
+       "no_of_employees                843\n",
+       "yr_of_estab                   1972\n",
+       "region_of_employment       Midwest\n",
+       "prevailing_wage           79948.12\n",
+       "unit_of_wage                  Year\n",
+       "full_time_position               Y\n",
+       "Name: 0, dtype: object"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[0][1:-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'case_id': 'EZYV20',\n",
+       " 'continent': 'Asia',\n",
+       " 'education_of_employee': 'Doctorate',\n",
+       " 'has_job_experience': 'N',\n",
+       " 'requires_job_training': 'N',\n",
+       " 'no_of_employees': 843,\n",
+       " 'yr_of_estab': 1972,\n",
+       " 'region_of_employment': 'Midwest',\n",
+       " 'prevailing_wage': 79948.12,\n",
+       " 'unit_of_wage': 'Year',\n",
+       " 'full_time_position': 'Y'}"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(df.iloc[0][1:-1]).to_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=df[0:2][1:-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_id': {},\n",
+       " 'case_id': {},\n",
+       " 'continent': {},\n",
+       " 'education_of_employee': {},\n",
+       " 'has_job_experience': {},\n",
+       " 'requires_job_training': {},\n",
+       " 'no_of_employees': {},\n",
+       " 'yr_of_estab': {},\n",
+       " 'region_of_employment': {},\n",
+       " 'prevailing_wage': {},\n",
+       " 'unit_of_wage': {},\n",
+       " 'full_time_position': {},\n",
+       " 'case_status': {}}"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.to_dict()"
    ]
   },
   {
